<resources>
    <string name="app_name">Baking</string>

    <!--Network-->
    <string name="recipe_url">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>

    <!--Widget-->
    <string name="appwidget_initial_text">CLICK TO START BAKING NOW!</string>
    <string name="add_widget">Add widget</string>

    <string name="servings_text">Servings: %d</string>
    <string name="null_pointer_recipe">cannot find recipe in list</string>

    <!--Tests-->
    <string name="first_recipe_name">Nutella Pie</string>
    <string name="first_step_name">Recipe Introduction</string>
    <string name="last_recipe_name">Cheesecake</string>
</resources>
