...
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/name" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/rv_steps"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredients"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/name"
            android:layout_marginRight="8dp"
...
